.provarCaches/00D410000011HE0EAM/objects/rstk__icclockdtl__c.object
<CustomObject>
    <description>icclockdtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icclockdtl_icclocktxn__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icclockdtl_wocst__r.rstk__wocst_ordno__c &amp; &apos;_&apos; &amp; TEXT(ROUND( rstk__icclockdtl_woordop__r.rstk__woordop_oper__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icclockdtl_icclocktxn__r.Name &amp; &apos;_&apos; &amp;  rstk__icclockdtl_wocst__r.rstk__wocst_ordno__c &amp; &apos;_&apos; &amp; TEXT( ROUND( rstk__icclockdtl_woordop__r.rstk__woordop_oper__c, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_qtyrevs__c</fullName>
        <formula>MIN((rstk__icclockdtl_wocst__r.rstk__wocst_qtyreq__c - rstk__icclockdtl_wocst__r.rstk__wocst_qtyacc__c), rstk__icclockdtl_wocst__r.rstk__wocst_qtyinwip__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Eligible For Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_hours__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_icclocktxn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clock Transaction</label>
        <referenceTo>rstk__icclocktxn__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_labposted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Txn Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_labreversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_opcomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>OP Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_opernumtext__c</fullName>
        <description>Operation number for this employee cost transaction detail record, used for sorting purposes.</description>
        <formula>rstk__icclockdtl_woordop__r.rstk__woordop_oper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Number text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtycomplete__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtymove__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Move Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtymoveposted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Move Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtymovereversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Move Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtyposted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Complete Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtyreversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtyship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtyshipposted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field indicates that the update to the operation ship quantity has been successful</inlineHelpText>
        <label>Qty Ship Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_qtyshipreversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field indicates that the reversal to the operation ship quantity has been successful</inlineHelpText>
        <label>Qty Ship Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_rtmach__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine Master</label>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_rtwctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup Labor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_suppresslabbf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Suppress Labor Backflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_tasessioninfo__c</fullName>
        <label>T&amp;A Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_tatxnid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>T&amp;A Transaction ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_txncomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclockdtl_wopwip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Txn</label>
        <referenceTo>rstk__wopwip__c</referenceTo>
        <relationshipLabel>Employee Clock Txn Details</relationshipLabel>
        <relationshipName>icclockdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Employee Clock Txn Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Clock_Transaction_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__icclockdtl_wopwip__c</columns>
        <columns>rstk__icclockdtl_wocst__c</columns>
        <columns>rstk__icclockdtl_woordop__c</columns>
        <columns>rstk__icclockdtl_icclocktxn__c</columns>
        <columns>rstk__icclockdtl_hours__c</columns>
        <columns>rstk__icclockdtl_setup__c</columns>
        <columns>rstk__icclockdtl_labposted__c</columns>
        <columns>rstk__icclockdtl_labreversed__c</columns>
        <columns>rstk__icclockdtl_qtycomplete__c</columns>
        <columns>rstk__icclockdtl_qtyposted__c</columns>
        <columns>rstk__icclockdtl_qtyreversed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Clock Transaction Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Clock_Transaction_Detail_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__icclockdtl_wopwip__c</columns>
        <columns>rstk__icclockdtl_wocst__c</columns>
        <columns>rstk__icclockdtl_woordop__c</columns>
        <columns>rstk__icclockdtl_icclocktxn__c</columns>
        <columns>rstk__icclockdtl_hours__c</columns>
        <columns>rstk__icclockdtl_labposted__c</columns>
        <columns>rstk__icclockdtl_labreversed__c</columns>
        <columns>rstk__icclockdtl_qtycomplete__c</columns>
        <columns>rstk__icclockdtl_qtyposted__c</columns>
        <columns>rstk__icclockdtl_qtyreversed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icclockdtl_tasessioninfo__c</columns>
        <columns>rstk__icclockdtl_tatxnid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Clock Transaction Detail - Select</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RSClock_Transaction_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__icclockdtl_wocst__c</columns>
        <columns>rstk__icclockdtl_wopwip__c</columns>
        <columns>rstk__icclockdtl_woordop__c</columns>
        <columns>rstk__icclockdtl_icclocktxn__c</columns>
        <columns>rstk__icclockdtl_hours__c</columns>
        <columns>rstk__icclockdtl_setup__c</columns>
        <columns>rstk__icclockdtl_labposted__c</columns>
        <columns>rstk__icclockdtl_labreversed__c</columns>
        <columns>rstk__icclockdtl_qtycomplete__c</columns>
        <columns>rstk__icclockdtl_qtyposted__c</columns>
        <columns>rstk__icclockdtl_qtyreversed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Clock Transaction Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Clock Txn Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>